// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders with default "blue-dark" variant and children 1`] = `
<button
  class="
        px-10 pt-2.5 pb-3 rounded-xl font-roboto font-bold 
        text-xl transition-colors flex gap-2 items-center
       
    bg-organick-blue-dark text-default-white border-organick-blue-dark border
    hover:bg-default-white hover:text-organick-blue-dark
  "
  type="button"
>
  Click me
</button>
`;

exports[`Button component renders with default "white" variant and children 1`] = `
<button
  class="
        px-10 pt-2.5 pb-3 rounded-xl font-roboto font-bold 
        text-xl transition-colors flex gap-2 items-center
       
    bg-organick-white border-organick-blue-dark border text-organick-blue-dark
    hover:bg-organick-blue-dark hover:text-default-white
  "
  type="button"
>
  Click me
</button>
`;

exports[`Button component renders with default "yellow" variant and children 1`] = `
<button
  class="
        px-10 pt-2.5 pb-3 rounded-xl font-roboto font-bold 
        text-xl transition-colors flex gap-2 items-center
       
    bg-organick-yellow text-organick-blue-dark border-organick-yellow border
    hover:bg-default-white
  "
  type="button"
>
  Click me
</button>
`;

exports[`Button component renders with icon when icon prop is true 1`] = `
<button
  class="
        px-10 pt-2.5 pb-3 rounded-xl font-roboto font-bold 
        text-xl transition-colors flex gap-2 items-center
       
    bg-organick-blue-dark text-default-white border-organick-blue-dark border
    hover:bg-default-white hover:text-organick-blue-dark
  "
  type="button"
>
  Click me
  <img
    alt="arrow icon"
    class="w-4 h-4 relative top-[0.3px]"
    data-nimg="1"
    decoding="async"
    height="40"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
    style="color: transparent;"
    width="40"
  />
</button>
`;
